--- a/npc/pre-re/scripts_monsters.conf
+++ b/npc/pre-re/scripts_monsters.conf
@@ -13,6 +13,7 @@ npc: npc/pre-re/mobs/dungeons/anthell.txt
 npc: npc/pre-re/mobs/dungeons/ayo_dun.txt
 npc: npc/pre-re/mobs/dungeons/beach_dun.txt
 npc: npc/pre-re/mobs/dungeons/c_tower.txt
+npc: npc/pre-re/mobs/dungeons/dic_dun.txt
 npc: npc/pre-re/mobs/dungeons/ein_dun.txt
 npc: npc/pre-re/mobs/dungeons/gef_dun.txt
 npc: npc/pre-re/mobs/dungeons/gefenia.txt
